--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/dwgrossberg/OSU_340_Group21#readme",
   "dependencies": {
     "express": "^4.19.2",
+    "express-handlebars": "^7.1.2",
     "forever": "^4.0.3",
     "mysql": "^2.18.1"
   }
